Split resume into its own page.

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -19,6 +19,7 @@
         <aside class="header-element">
           <ul class="page-list">
             <li><a class="page-link" href="/">About Me</a></li>
+            <li><a class="page-link" href="/resume">Resume</a></li>
             <li><a class="page-link" href="/tailoring">Tailoring</a></li>
             <li><a class="page-link" href="/pattern_cutting">Pattern Cutting</a></li>
             <li><a class="page-link" href="/garment_construction">Garment Construction</a></li>
