Change color bar to teal.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,7 +22,7 @@ div.color-bar {
   -webkit-flex: 0 0 auto;
   width: 100%;
   height: 6px;
-  background-color: #607D8B;
+  background-color: #00695C;
 }
 
 aside ul.page-list {
